examples/negative/type_errors/L4/15_bool_in_int_record.ob
MODULE Record;

TYPE RecordTest = RECORD
       foo: INTEGER;
       bar: BOOLEAN
     END;

VAR r: RecordTest;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  r.bar := TRUE;

  (* Ensures errors occur on the correct line *)
  r.foo := TRUE; ok := TRUE;
END Record.
